--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "firebase": "^9.23.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
